# data_science

./: README.md  pyproject.toml
codigos/modulo_5/: aula_02.py
modulo_2/: aula_01.md  aula_02.md  aula_03.md  aula_04.md  aula_05.md  aula_06.md  aula_07.md  aula_08.md
modulo_3/: aula_01.md  aula_02.md
modulo_5/: aula_01.md  aula_02.md
