[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["leandroflores7 <leandroflores7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "1.23.1"
pandas = "0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
